double scroll fixed

--- a/css/home-v4.css
+++ b/css/home-v4.css
@@ -17,9 +17,7 @@ a:hover{
     color: #44A647;
     text-decoration: underline;
 }
-section{
-    margin: -2px 0;
-}
+
 section.topBar {
     background: #44A647;
     padding: 12px 15px;
